styles/footer.css
.footer-main {
    /* height: 300px;
    background: var(--blue); */
    background: #eee;
    padding: 130px 0;
    margin: 0;

}

 .footer-icon {
    margin-top: 31px;

}

.footer-icon__link {
    border-radius: 80%;
    background: rgba(128, 128, 128, 0.1); 
    padding: 10px 13px ;
    margin-right: 6px;
}

.footer-logo {
    margin-bottom: 28px;
} 

.footer-nav {
    margin-top: 31px;

}

.footer-nav__link {
    text-decoration: none;
    font-family: var(--font);
    font-weight: 400;
    font-size: 16px;
    width: 100%;
    color: var(--dark);
    margin-bottom: 24px;
    display: block;
}

.footer-nav__link:hover {
    color: var(--blue);
}

h3 { 
    margin: 0;
}

.footer-main h3 {
    color: var(--grey);
    font-size: 16px;
    line-height: 28px;
    font-weight: 400;
}

.footer-item h3 {
    color: var(--dark);
    font-weight: 700;
    margin-bottom: 31px;
    font-size: 18px;
}

